--- a/style.css
+++ b/style.css
@@ -79,11 +79,13 @@ main
 
 .content_rating .rate
 {
+    display: flex;
+    flex-direction: column;
     margin: 5% 3%;
     text-align: center;
     background-color: var(--light-grayish-magenta);
     padding: 0.9em;
-    border-radius: 5px;
+    border-radius: 8px;
     color: var(--very-dark-magenta);
     font-weight: 700;
 }
@@ -109,7 +111,7 @@ main
     margin: 5% 0;
     padding: 8%;
     background: var(--very-dark-magenta);
-    border-radius: 5px;
+    border-radius: 8px;
 }
 
 .feedback .info
@@ -166,5 +168,91 @@ footer
     body
     {
         background: url(./images/bg-pattern-top-desktop.svg), url(./images/bg-pattern-bottom-desktop.svg);
+        background-repeat: no-repeat;
+        background-position: left top, right bottom;
+    }
+
+    main
+    {
+        margin: 5% 7%;
+    }
+
+    .container
+    {
+        display: grid;
+    }
+
+    #intro
+    {
+        width: 80%;
+    }
+
+    .block .content_intro
+    {
+        text-align: left;
+    }
+
+    .block .content_intro h1
+    {
+        margin: 0 15% 0 0;
+        font-size: 2.8rem;
+    }
+
+    .content_rating .rate
+    {
+        flex-direction: row;
+        text-align: center;
+        align-items: center;
+        width: 80%;
+        margin-top: 4%;
+    }
+
+    .content_rating .rate:nth-child(2)
+    {
+        margin-left: 4rem;
+    }
+    .content_rating .rate:nth-child(3)
+    {
+        margin-left: 8rem;
+    }
+
+    .content_rating .rate .star
+    {
+        padding-left: 1em;
+    }
+
+    .content_rating .rate p
+    {
+        margin: 0;
+        padding-left: 8%;
+    }
+
+    
+    #feedback
+    {
+        grid-column: 1/span 2;
+    }
+
+    .content_feedback
+    {
+        flex-direction: row;
+    }
+
+    .content_feedback .feedback
+    {
+        margin: 0 0.5em;
+        padding: 3%;
+        border-radius: 10px;
+    }
+
+    .content_feedback .feedback:nth-child(2)
+    {
+        margin-top: 2rem;
+        margin-bottom: -2rem;
+    }
+    .content_feedback .feedback:nth-child(3)
+    {
+        margin-top: 4rem;
+        margin-bottom: -4rem;
     }
 }
