--- a/style.css
+++ b/style.css
@@ -113,6 +113,7 @@ main
     padding: 8%;
     background: var(--very-dark-magenta);
     border-radius: 8px;
+    max-width: 34rem;
 }
 
 .feedback .info
@@ -205,16 +206,16 @@ footer
         text-align: center;
         align-items: center;
         width: 80%;
-        margin-top: 4%;
+        margin: 4% 2%;
     }
 
     .content_rating .rate:nth-child(2)
     {
-        margin-left: 4rem;
+        margin-left: 3rem;
     }
     .content_rating .rate:nth-child(3)
     {
-        margin-left: 8rem;
+        margin-left: 6rem;
     }
 
     .content_rating .rate .star
